# fastapi-template

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
tests/: test_sample.py
