[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["yunus <532708564@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
